fixed overlapping sources images on small screens

--- a/src/components/Data/DataSource.css
+++ b/src/components/Data/DataSource.css
@@ -20,6 +20,20 @@
     font-size:10em;
     border-radius:4px;
     border:1px solid #bbb;
+    background: #A88BEB;
+    box-sizing: border-box;
+    /* Old browsers */
+    background: -moz-linear-gradient(to bottom, #A88BEB 0%, #F1A7F1 44%, #F8CEEC 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #A88BEB), color-stop(44%, #F1A7F1), color-stop(100%, #F8CEEC));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(to bottom, #A88BEB 0%, #F1A7F1 44%, #F8CEEC 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(to bottom, #A88BEB 0%, #F1A7F1 44%, #F8CEEC 100%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(to bottom, #A88BEB 0%, #F1A7F1 44%, #F8CEEC 100%);
+    /* IE10+ */
+    background: linear-gradient(to bottom, #A88BEB 0%, #F1A7F1 44%, #F8CEEC 100%);
 }
 
 .zone > img {
@@ -27,8 +41,11 @@
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-    width: 60px;
+    width: 100%;
     height: auto;
+    padding: 5%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .more {
@@ -43,6 +60,17 @@
 
 .source-chart {
     margin-top: 40px;
+}
+
+@media only screen and (min-width: 620px) and (max-width: 760px){
+    .zone > img {
+      width: 80.500%;
+  }
+}
+@media only screen and (min-width: 760px) and (max-width: 1110px){
+  .zone > img {
+    width: 60.500%;
+}
 }
 
 @media only screen and (max-width: 1110px) {
@@ -104,27 +132,6 @@
 div>span {
     font-size: 10rem;
     color: #fff;
-}
-
-
-/***********************************************************************
- *  Purple Background
- **********************************************************************/
-.purple {
-    background: #A88BEB;
-    /* Old browsers */
-    background: -moz-linear-gradient(to bottom, #A88BEB 0%, #F1A7F1 44%, #F8CEEC 100%);
-    /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #A88BEB), color-stop(44%, #F1A7F1), color-stop(100%, #F8CEEC));
-    /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(to bottom, #A88BEB 0%, #F1A7F1 44%, #F8CEEC 100%);
-    /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(to bottom, #A88BEB 0%, #F1A7F1 44%, #F8CEEC 100%);
-    /* Opera 11.10+ */
-    background: -ms-linear-gradient(to bottom, #A88BEB 0%, #F1A7F1 44%, #F8CEEC 100%);
-    /* IE10+ */
-    background: linear-gradient(to bottom, #A88BEB 0%, #F1A7F1 44%, #F8CEEC 100%);
-    /* W3C */
 }
 
 .tooltip1 {
